plugins {
    id 'java'
    id "application"
    id "com.github.johnrengelman.shadow" version "7.1.0"
}

targetCompatibility = 8
sourceCompatibility = 8

group = 'smlauncher.updater'
mainClassName = 'smlauncher.StarMadeLauncher'

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation 'commons-io:commons-io:2.11.0'
}

jar {
    manifest {
        attributes 'Main-Class': 'smlauncher.updater.LauncherUpdater'
    }
    duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
    destinationDirectory.set(file("../src/main/resources/"))
    setArchivesBaseName("Updater")
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}